# claude-code-the-gardener

./: .env.tpl  .gitignore  AGENTS.md  plan.md  plant-care-mcp.service  pyproject.toml
agent/: .env.agent.example  README.md  (+3 more)
app/: .env.example  .gitignore  README.md  admin_routes.py  camera_manual_check.py  conftest.py  implementation_plan.md  main.py  pyproject.toml  run_http.py  server.py  shared_state.py  simple_test.py  test_action_log.py  test_camera.py  test_camera_manual.py  test_http_photo_serving.py  test_jsonl_history.py  test_light.py  test_light_integration.py  test_light_scheduling.py  test_moisture_sensor.py  test_plant_status.py  test_server.py  test_thinking.py  test_utcnow.py  test_water_pump.py  tool_descriptions.md  web_routes.py
app/data/: water_pump_state.json
app/deploy/: camera-focus.service  implementation_plan.md  install-mcp-server.sh  plant-care-mcp.service
app/docs/: camera_setup.md  implementation_plan.md  prompt_candidates.md  rpi.md  tool_descriptions.md
app/scripts/: camera_manual_check.py  capture_test_photos.py  check_smtp.py  manual_debug.py
app/tests/: README.md  __init__.py  test_action_log.py  test_admin_routes.py  test_camera.py  test_esp32_config.py  test_esp32_integration.py  test_http_photo_serving.py  test_human_messages.py  test_jsonl_history.py  test_light.py  test_light_integration.py  test_light_scheduling.py  test_moisture_sensor.py  test_notes.py  test_plant_status.py  test_server.py  test_thinking.py  test_utcnow.py  test_water_pump.py  test_web_routes.py
app/tools/: action_log.py  camera.py  human_messages.py  light.py  moisture_sensor.py  notes.py  plant_status.py  thinking.py  utcnow.py  water_pump.py
app/utils/: __init__.py  esp32_config.py  jsonl_history.py  logging_config.py  paths.py
gha-processor/: pyproject.toml
gha-processor/processor/: conversation.py  cursor.py  helpers.py  main.py  model_pricing.json  photos.py  r2_client.py  sensors.py  sessions.py
gha-processor/scripts/: install-helpers.sh  process_local.py
gha-processor/tests/: conftest.py  test_conversation.py  test_cursor.py  test_main.py  test_photos.py  test_sensors.py  test_sessions.py
(+123 files in other folders)
