[project]
name = "plant_care_mcp_servers"
version = "0.1.0"
description = "MCP servers for automated plant care system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
