[project]
name = "plant_care_mcp_servers"
version = "0.1.0"
description = "MCP servers for automated plant care system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "opencv-python-headless>=4.12.0.88",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "freezegun>=1.5.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (integration tests requiring real hardware)",
]
# Run fast tests by default, use -m slow to run integration tests
addopts = "-v"
