[project]
name = "gardener-processor"
version = "0.1.0"
description = "GHA data processor for Claude the Gardener"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[s3]>=5.0",
    "boto3-stubs[s3]>=1.35",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle errors, pyflakes, isort

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["processor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
